--- a/index.html
+++ b/index.html
@@ -14,47 +14,83 @@
   <body>
     <header>
       <h1>Lista de Tarefas</h1>
-      <button class="button compact rotate-icon" id="button-create-new-task">
-        <div class="text-container">
-          <span class="text">Novo</span>
-        </div>
-        <div class="icon-container">
-          <span class="icon material-symbols-outlined"> add </span>
-        </div>
-      </button>
     </header>
     <main>
-      <ul class="category-container round-corners">
-        <li class="card round-corners">
+      <ul class="category-container">
+        <li class="card optional">
           <div class="card-category">
             <h3>Opcional</h3>
+            <span class="icon material-symbols-outlined"> add </span>
           </div>
           <div class="container">
-            <span>Isto é um teste</span>
+            <ul>
+                <li>
+                    <span>Isto é um teste 1</span>
+                </li>
+                <li>
+                    <span>Isto é um teste 2</span>
+                </li>
+                <li>
+                    <span>Isto é um teste 2</span>
+                </li>
+            </ul>
           </div>
         </li>
-        <li class="card round-corners">
+        <li class="card important">
           <div class="card-category">
             <h3>Importante</h3>
+            <span class="icon material-symbols-outlined"> add </span>
           </div>
           <div class="container">
-            <span>Isto é um teste</span>
+            <ul>
+                <li>
+                    <span>Isto é um teste 1</span>
+                </li>
+                <li>
+                    <span>Isto é um teste 2</span>
+                </li>
+                <li>
+                    <span>Isto é um teste 2</span>
+                </li>
+            </ul>
           </div>
         </li>
-        <li class="card round-corners">
+        <li class="card urgent">
           <div class="card-category">
             <h3>Urgente</h3>
+            <span class="icon material-symbols-outlined"> add </span>
           </div>
           <div class="container">
-            <span>Isto é um teste</span>
+            <ul>
+                <li>
+                    <span>Isto é um teste 1</span>
+                </li>
+                <li>
+                    <span>Isto é um teste 2</span>
+                </li>
+                <li>
+                    <span>Isto é um teste 2</span>
+                </li>
+            </ul>
           </div>
         </li>
-        <li class="card round-corners">
+        <li class="card immediate">
           <div class="card-category">
             <h3>Imediato</h3>
+            <span class="icon material-symbols-outlined"> add </span>
           </div>
           <div class="container">
-            <span>Isto é um teste</span>
+            <ul>
+                <li>
+                    <span>Isto é um teste 1</span>
+                </li>
+                <li>
+                    <span>Isto é um teste 2</span>
+                </li>
+                <li>
+                    <span>Isto é um teste 2</span>
+                </li>
+            </ul>
           </div>
         </li>
       </ul>
