--- a/index.html
+++ b/index.html
@@ -18,78 +18,110 @@
     <main>
       <ul class="category-container">
         <li class="card optional">
-          <div class="card-category">
-            <h3>Opcional</h3>
-            <span class="icon material-symbols-outlined"> add </span>
+          <div class="card-header">
+            <div class="card-category">
+              <h3>Opcional</h3>
+              <span class="icon material-symbols-outlined"> add </span>
+            </div>
+            <form>
+              <input type="text" placeholder="Descreva a tarefa" required />
+              <button type="submit" class="add-button">
+                <span class="material-symbols-outlined"> check </span>
+              </button>
+            </form>
           </div>
           <div class="container">
             <ul>
-                <li>
-                    <span>Isto é um teste 1</span>
-                </li>
-                <li>
-                    <span>Isto é um teste 2</span>
-                </li>
-                <li>
-                    <span>Isto é um teste 2</span>
-                </li>
+              <li>
+                <span>Isto é um teste 1</span>
+              </li>
+              <li>
+                <span>Isto é um teste 2</span>
+              </li>
+              <li>
+                <span>Isto é um teste 2</span>
+              </li>
             </ul>
           </div>
         </li>
         <li class="card important">
-          <div class="card-category">
-            <h3>Importante</h3>
-            <span class="icon material-symbols-outlined"> add </span>
+          <div class="card-header">
+            <div class="card-category">
+              <h3>Importante</h3>
+              <span class="icon material-symbols-outlined"> add </span>
+            </div>
+            <form>
+                <input type="text" placeholder="Descreva a tarefa" required />
+                <button type="submit" class="add-button">
+                  <span class="material-symbols-outlined"> check </span>
+                </button>
+              </form>
           </div>
           <div class="container">
             <ul>
-                <li>
-                    <span>Isto é um teste 1</span>
-                </li>
-                <li>
-                    <span>Isto é um teste 2</span>
-                </li>
-                <li>
-                    <span>Isto é um teste 2</span>
-                </li>
+              <li>
+                <span>Isto é um teste 1</span>
+              </li>
+              <li>
+                <span>Isto é um teste 2</span>
+              </li>
+              <li>
+                <span>Isto é um teste 2</span>
+              </li>
             </ul>
           </div>
         </li>
         <li class="card urgent">
-          <div class="card-category">
-            <h3>Urgente</h3>
-            <span class="icon material-symbols-outlined"> add </span>
+          <div class="card-header">
+            <div class="card-category">
+              <h3>Urgente</h3>
+              <span class="icon material-symbols-outlined"> add </span>
+            </div>
+            <form>
+                <input type="text" placeholder="Descreva a tarefa" required />
+                <button type="submit" class="add-button">
+                  <span class="material-symbols-outlined"> check </span>
+                </button>
+              </form>
           </div>
           <div class="container">
             <ul>
-                <li>
-                    <span>Isto é um teste 1</span>
-                </li>
-                <li>
-                    <span>Isto é um teste 2</span>
-                </li>
-                <li>
-                    <span>Isto é um teste 2</span>
-                </li>
+              <li>
+                <span>Isto é um teste 1</span>
+              </li>
+              <li>
+                <span>Isto é um teste 2</span>
+              </li>
+              <li>
+                <span>Isto é um teste 2</span>
+              </li>
             </ul>
           </div>
         </li>
         <li class="card immediate">
-          <div class="card-category">
-            <h3>Imediato</h3>
-            <span class="icon material-symbols-outlined"> add </span>
+          <div class="card-header">
+            <div class="card-category">
+              <h3>Imediato</h3>
+              <span class="icon material-symbols-outlined"> add </span>
+            </div>
+            <form>
+                <input type="text" placeholder="Descreva a tarefa" required />
+                <button type="submit" class="add-button">
+                  <span class="material-symbols-outlined"> check </span>
+                </button>
+              </form>
           </div>
           <div class="container">
             <ul>
-                <li>
-                    <span>Isto é um teste 1</span>
-                </li>
-                <li>
-                    <span>Isto é um teste 2</span>
-                </li>
-                <li>
-                    <span>Isto é um teste 2</span>
-                </li>
+              <li>
+                <span>Isto é um teste 1</span>
+              </li>
+              <li>
+                <span>Isto é um teste 2</span>
+              </li>
+              <li>
+                <span>Isto é um teste 2</span>
+              </li>
             </ul>
           </div>
         </li>
