--- a/index.html
+++ b/index.html
@@ -4,11 +4,14 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="main.css" />
     <link
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
     />
+    <link rel="stylesheet" href="main.css" />
+
+    <script defer src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
+    <script defer src="main.js"></script>
     <title>Lista de Tarefas</title>
   </head>
   <body>
@@ -21,14 +24,16 @@
           <div class="card-header">
             <div class="card-category">
               <h3>Opcional</h3>
-              <span class="icon material-symbols-outlined"> add </span>
+              <span class="icon material-symbols-outlined" id="add-optional"> add </span>
             </div>
-            <form>
-              <input type="text" placeholder="Descreva a tarefa" required />
-              <button type="submit" class="add-button">
-                <span class="material-symbols-outlined"> check </span>
-              </button>
-            </form>
+            <div class="form-container hidden" id="form-optional">
+                <form>
+                  <input id="input-optional" type="text" placeholder="Descreva a tarefa" required />
+                  <button type="submit" class="add-button">
+                    <span class="material-symbols-outlined"> check </span>
+                  </button>
+                </form>
+            </div>
           </div>
           <div class="container">
             <ul>
@@ -48,14 +53,16 @@
           <div class="card-header">
             <div class="card-category">
               <h3>Importante</h3>
-              <span class="icon material-symbols-outlined"> add </span>
+              <span class="icon material-symbols-outlined" id="add-important"> add </span>
             </div>
-            <form>
-                <input type="text" placeholder="Descreva a tarefa" required />
-                <button type="submit" class="add-button">
-                  <span class="material-symbols-outlined"> check </span>
-                </button>
-              </form>
+            <div class="form-container hidden" id="form-important">
+                <form>
+                  <input type="text" placeholder="Descreva a tarefa" required />
+                  <button type="submit" class="add-button">
+                    <span class="material-symbols-outlined"> check </span>
+                  </button>
+                </form>
+            </div>
           </div>
           <div class="container">
             <ul>
@@ -75,14 +82,16 @@
           <div class="card-header">
             <div class="card-category">
               <h3>Urgente</h3>
-              <span class="icon material-symbols-outlined"> add </span>
+              <span class="icon material-symbols-outlined" id="add-urgent"> add </span>
             </div>
-            <form>
-                <input type="text" placeholder="Descreva a tarefa" required />
-                <button type="submit" class="add-button">
-                  <span class="material-symbols-outlined"> check </span>
-                </button>
-              </form>
+            <div class="form-container hidden" id="form-urgent">
+                <form>
+                  <input type="text" placeholder="Descreva a tarefa" required />
+                  <button type="submit" class="add-button">
+                    <span class="material-symbols-outlined"> check </span>
+                  </button>
+                </form>
+            </div>
           </div>
           <div class="container">
             <ul>
@@ -102,14 +111,16 @@
           <div class="card-header">
             <div class="card-category">
               <h3>Imediato</h3>
-              <span class="icon material-symbols-outlined"> add </span>
+              <span class="icon material-symbols-outlined" id="add-immediate"> add </span>
             </div>
-            <form>
-                <input type="text" placeholder="Descreva a tarefa" required />
-                <button type="submit" class="add-button">
-                  <span class="material-symbols-outlined"> check </span>
-                </button>
-              </form>
+            <div class="form-container hidden" id="form-immediate">
+                <form>
+                  <input type="text" placeholder="Descreva a tarefa" required />
+                  <button type="submit" class="add-button">
+                    <span class="material-symbols-outlined"> check </span>
+                  </button>
+                </form>
+            </div>
           </div>
           <div class="container">
             <ul>
