--- a/index.html
+++ b/index.html
@@ -24,20 +24,27 @@
           <div class="card-header">
             <div class="card-category">
               <h3>Opcional</h3>
-              <span class="icon material-symbols-outlined" id="add-optional"> add </span>
+              <span class="icon material-symbols-outlined" id="add-optional">
+                add
+              </span>
             </div>
             <div class="form-container hidden" id="form-optional">
-                <form>
-                  <input id="input-optional" type="text" placeholder="Descreva a tarefa" required />
-                  <button type="submit" class="add-button">
-                    <span class="material-symbols-outlined"> check </span>
-                  </button>
-                </form>
+              <form>
+                <input
+                  id="input-optional"
+                  type="text"
+                  placeholder="Descreva a tarefa"
+                  required
+                />
+                <button type="submit" class="add-button">
+                  <span class="material-symbols-outlined"> check </span>
+                </button>
+              </form>
             </div>
           </div>
           <div class="container">
-            <ul>
-              <li>
+            <ul id="list-optional">
+              <!-- <li>
                 <span>Isto é um teste 1</span>
               </li>
               <li>
@@ -45,7 +52,7 @@
               </li>
               <li>
                 <span>Isto é um teste 2</span>
-              </li>
+              </li> -->
             </ul>
           </div>
         </li>
@@ -53,20 +60,22 @@
           <div class="card-header">
             <div class="card-category">
               <h3>Importante</h3>
-              <span class="icon material-symbols-outlined" id="add-important"> add </span>
+              <span class="icon material-symbols-outlined" id="add-important">
+                add
+              </span>
             </div>
             <div class="form-container hidden" id="form-important">
-                <form>
-                  <input type="text" placeholder="Descreva a tarefa" required />
-                  <button type="submit" class="add-button">
-                    <span class="material-symbols-outlined"> check </span>
-                  </button>
-                </form>
+              <form>
+                <input  id="input-important" type="text" placeholder="Descreva a tarefa" required />
+                <button type="submit" class="add-button">
+                  <span class="material-symbols-outlined"> check </span>
+                </button>
+              </form>
             </div>
           </div>
           <div class="container">
-            <ul>
-              <li>
+            <ul id="list-important">
+              <!-- <li>
                 <span>Isto é um teste 1</span>
               </li>
               <li>
@@ -74,7 +83,7 @@
               </li>
               <li>
                 <span>Isto é um teste 2</span>
-              </li>
+              </li> -->
             </ul>
           </div>
         </li>
@@ -82,20 +91,22 @@
           <div class="card-header">
             <div class="card-category">
               <h3>Urgente</h3>
-              <span class="icon material-symbols-outlined" id="add-urgent"> add </span>
+              <span class="icon material-symbols-outlined" id="add-urgent">
+                add
+              </span>
             </div>
             <div class="form-container hidden" id="form-urgent">
-                <form>
-                  <input type="text" placeholder="Descreva a tarefa" required />
-                  <button type="submit" class="add-button">
-                    <span class="material-symbols-outlined"> check </span>
-                  </button>
-                </form>
+              <form>
+                <input id="input-urgent" type="text" placeholder="Descreva a tarefa" required />
+                <button type="submit" class="add-button">
+                  <span class="material-symbols-outlined"> check </span>
+                </button>
+              </form>
             </div>
           </div>
           <div class="container">
-            <ul>
-              <li>
+            <ul id="list-urgent">
+              <!-- <li>
                 <span>Isto é um teste 1</span>
               </li>
               <li>
@@ -103,7 +114,7 @@
               </li>
               <li>
                 <span>Isto é um teste 2</span>
-              </li>
+              </li> -->
             </ul>
           </div>
         </li>
@@ -111,20 +122,22 @@
           <div class="card-header">
             <div class="card-category">
               <h3>Imediato</h3>
-              <span class="icon material-symbols-outlined" id="add-immediate"> add </span>
+              <span class="icon material-symbols-outlined" id="add-immediate">
+                add
+              </span>
             </div>
             <div class="form-container hidden" id="form-immediate">
-                <form>
-                  <input type="text" placeholder="Descreva a tarefa" required />
-                  <button type="submit" class="add-button">
-                    <span class="material-symbols-outlined"> check </span>
-                  </button>
-                </form>
+              <form>
+                <input id="input-immediate" type="text" placeholder="Descreva a tarefa" required />
+                <button type="submit" class="add-button">
+                  <span class="material-symbols-outlined"> check </span>
+                </button>
+              </form>
             </div>
           </div>
           <div class="container">
-            <ul>
-              <li>
+            <ul id="list-immediate">
+              <!-- <li>
                 <span>Isto é um teste 1</span>
               </li>
               <li>
@@ -132,7 +145,7 @@
               </li>
               <li>
                 <span>Isto é um teste 2</span>
-              </li>
+              </li> -->
             </ul>
           </div>
         </li>
